[package]
name = "hagl-sys"
version = "0.1.0"
authors = ["Ivan Markov <ivan.markov@gmail.com>"]
edition = "2018"

# No xtensa in regular compiler yet
[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"

[build-dependencies]
#cargo-pio = {version = "*", git = "https://github.com/ivmarkov/cargo-pio"}
cargo-pio = {version = "*", path = "../../cargo-pio"}
anyhow = "1.0"
